Added support for user defined java and game parameters * no gui support, i am not familiar with JavaFX